--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awax</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    </script>
 </head>
 
 </head>
+
 <body>
-    
+    <header>
+        <div class="header">
+            <div class="logo">
+                <div class="logo-img"></div>
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li class="active"><a href="" >home</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Our Projects</a></li>
+                        <li><a href="">Our Team</a></li>
+                        <li><a href="">happy Clients</a></li>
+                        <li><a href="">Price</a></li>
+                        <li><a href="">Some Facts</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 <script src="assets/js/index.js" type="text/js"></script>
+
 </html>
