--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
         </div>
     </header>
     <main>
-
+        <div class="banner">
+            <div class="sliders">
+                <div class="slide">
+                    ...
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
