structure slide banner

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 <div class="slide">
                     ...
                 </div>
+                <div class="slide">
+                    ...
+                </div>
+                <div class="slide">
+                    ...
+                </div>
             </div>
         </div>
     </main>
