--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="active"><a href="" >home</a></li>
+                        <li class="active"><a href="">home</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Services</a></li>
                         <li><a href="">Our Projects</a></li>
@@ -42,14 +42,31 @@
         <div class="banner">
             <div class="sliders">
                 <div class="slide">
-                    ...
+                    <div class="slide-area">
+                        <h1>Design is About <br> <span>Communication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="">Get in Touch</a>
+                    </div>
                 </div>
                 <div class="slide">
-                    ...
+                    <div class="slide-area">
+                        <h1>Design is About <br> <span>Communication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="">Get in Touch</a>
+                    </div>
                 </div>
                 <div class="slide">
-                    ...
+                    <div class="slide-area">
+                        <h1>Design is About <br> <span>Communication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="">Get in Touch</a>
+                    </div>
                 </div>
+            </div>
+            <div class="sliders-pointers">
+                <div class="pointer actived"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
             </div>
         </div>
     </main>
