--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="active"><a href="">home</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Our Projects</a></li>
-                        <li><a href="">Our Team</a></li>
-                        <li><a href="">happy Clients</a></li>
-                        <li><a href="">Price</a></li>
-                        <li><a href="">Some Facts</a></li>
-                        <li><a href="">Contact Us</a></li>
+                        <li class="active"><a href="#">home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our Projects</a></li>
+                        <li><a href="#">Our Team</a></li>
+                        <li><a href="#">happy Clients</a></li>
+                        <li><a href="#">Price</a></li>
+                        <li><a href="#">Some Facts</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <main>
-        <div class="banner">
+        <section class="banner">
             <div class="sliders">
                 <div class="slide">
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in Touch</a>
+                        <a href="#">Get in Touch</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in Touch</a>
+                        <a href="#">Get in Touch</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in Touch</a>
+                        <a href="#">Get in Touch</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,31 @@
                 <div class="pointer"></div>
                 <div class="pointer"></div>
             </div>
-        </div>
+        </section>
+
+        <section class="defaut light">
+            <div class="section-title">
+                Titulo
+            </div>
+            <div class="section-desc">
+                teste
+            </div>
+            <div class="section-body">
+                ...
+            </div>
+        </section>
+
+        <section class="defaut dark">
+            <div class="section-title">
+                Titulo
+            </div>
+            <div class="section-desc">
+                teste
+            </div>
+            <div class="section-body">
+                ...
+            </div>
+        </section>
     </main>
     <footer>
 
