--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="#">Get in Touch</a>
+                        <a href="#" class="button">Get in Touch</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="#">Get in Touch</a>
+                        <a href="#" class="button">Get in Touch</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slide-area">
                         <h1>Design is About <br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="#">Get in Touch</a>
+                        <a href="#" class="button">Get in Touch</a>
                     </div>
                 </div>
             </div>
@@ -72,25 +72,67 @@
 
         <section class="defaut light">
             <div class="section-title">
-                Titulo
+                about us
             </div>
             <div class="section-desc">
-                teste
+                who we are ?
             </div>
             <div class="section-body">
-                ...
+                <div class="section-about-us">
+                    <div class="section-about-us--left">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                            an
+                            unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into electronic typesetting, remaining
+                            essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                            containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                            Aldus
+                            PageMaker including versions of Lorem Ipsum.
+                        </p>
+                        <br>
+
+                        <a href="" class="button">Learn More</a>
+                    </div>
+
+                    <div class="section-about-us--right">
+                        <img src="media/foto9.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="defaut dark">
             <div class="section-title">
-                Titulo
+                Services
             </div>
             <div class="section-desc">
-                teste
+                Services that we provide    
             </div>
             <div class="section-body">
-                ...
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="assets/images/medalha.png" alt="">
+                        <h4>HIGH QUALITY DESIGN</h4>
+                        <p>survived not only five centuries but also</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/estrela.png" alt="">
+                        <h4>MODERN DESIGN</h4>
+                        <p>survived not only five centuries but also</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/relogio.png" alt="">
+                        <h4>REGULAR UPDATES</h4>
+                        <p>survived not only five centuries but also</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/balao.png" alt="">
+                        <h4>FAST AND FREE SUPPORT</h4>
+                        <p>survived not only five centuries but also</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
