--- a/index.html
+++ b/index.html
@@ -135,6 +135,152 @@
                 </div>
             </div>
         </section>
+
+        <section class="defaut light">
+            <div class="section-title">
+                our projects
+            </div>
+            <div class="section-desc">
+                what we create ?
+            </div>
+            <div class="section-body">
+                <div class="section-projects">
+                    <div class="section-projects-filters">
+                        <ul>
+                            <li class="actived">all</li>
+                            <li>photos</li>
+                            <li>branding</li>
+                            <li>adverts</li>
+                            <li>development</li>
+                            <li>misc</li>
+                        </ul>
+                    </div>
+                    <div class="section-projects-photos">
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto4.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto5.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto6.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto4.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto5.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="section-projects-photo">
+                            <div class="section-projects-photo-area">
+                                <div class="section-projects-photo-information">
+                                    <h5>ABOUT</h5>
+                                    <p>survived not only five centuries but also</p>
+                                </div>
+                                <img src="media/foto6.jpg" alt="">
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <a href="" class="button">More Projects</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
