--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 Services
             </div>
             <div class="section-desc">
-                Services that we provide    
+                Services that we provide
             </div>
             <div class="section-body">
                 <div class="section-services">
@@ -275,9 +275,25 @@
                                 <img src="media/foto6.jpg" alt="">
                             </div>
                         </div>
-                        
+
                     </div>
                     <a href="" class="button">More Projects</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="defaut dark bg-time">
+            <div class="section-time-area">
+                <div class="section-title">
+                    Our Time
+                </div>
+                <div class="section-desc">
+                    Our co-workers
+                </div>
+                <div class="section-body">
+                    <div class="section-time">
+                        ...
+                    </div>
                 </div>
             </div>
         </section>
