--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
             </div>
         </section>
 
-        <section class="defaut dark bg-time">
-            <div class="section-time-area">
+        <section class="defaut dark bg-team">
+            <div class="section-team-area">
                 <div class="section-title">
                     Our Time
                 </div>
@@ -291,8 +291,68 @@
                     Our co-workers
                 </div>
                 <div class="section-body">
-                    <div class="section-time">
-                        ...
+                    <div class="section-team">
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team-avatar" src="media/mulher1.png" alt="">
+                                    <div class="section-team-name">
+                                        Jane Due
+                                    </div>
+                                    <div class="section-team-role">
+                                        Master Mind
+                                    </div>
+                                    <div class="section-team-social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team-avatar" src="media/homem1.png" alt="">
+                                    <div class="section-team-name">
+                                        Mike Chiller
+                                    </div>
+                                    <div class="section-team-role">
+                                        Creative Head
+                                    </div>
+                                    <div class="section-team-social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team-avatar" src="media/mulher2.png" alt="">
+                                    <div class="section-team-name">
+                                        Anna Jones
+                                    </div>
+                                    <div class="section-team-role">
+                                        Technical lead
+                                    </div>
+                                    <div class="section-team-social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer actived"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
                     </div>
                 </div>
             </div>
