--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
         </section>
 
-        <section class="default section-companies">
+        <section class="defaut section-companies">
             <div class="section-body">
                 <div class="section-companies--area">
                     <div class="section-company">
@@ -435,6 +435,55 @@
                     <div class="section-company">
                         <img src="media/empresa6.png" />
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="defaut light">
+            <div class="section-title">Price</div>
+            <div class="section-desc">Pricing Table</div>
+            <div class="section-body">
+                <div class="section-price">
+                        <div class="section-price--item">
+                            <div class="section-price--item-name">Express</div>
+                            <div class="section-price--item-money">$ 9.99</div>
+                            <div class="section-price--item-period">/ month</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <a href="" class="button button--dark">Choose</a>
+                        </div>
+                        <div class="section-price--item">
+                            <div class="section-price--item-name">Express</div>
+                            <div class="section-price--item-money">$ 9.99</div>
+                            <div class="section-price--item-period">/ month</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <a href="" class="button button--dark">Choose</a>
+                        </div>
+                        <div class="section-price--item">
+                            <div class="section-price--item-name">Express</div>
+                            <div class="section-price--item-money">$ 9.99</div>
+                            <div class="section-price--item-period">/ month</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <a href="" class="button button--dark">Choose</a>
+                        </div>
+                        <div class="section-price--item">
+                            <div class="section-price--item-name">Express</div>
+                            <div class="section-price--item-money">$ 9.99</div>
+                            <div class="section-price--item-period">/ month</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <div class="section-price--item-point">Tracking issues<br/>--</div>
+                            <a href="" class="button button--dark">Choose</a>
+                        </div>
                 </div>
             </div>
         </section>
