--- a/index.html
+++ b/index.html
@@ -632,6 +632,43 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-map">
+            <div class="section-map--area">
+                <div class="section-map--info">
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/carta.png" />
+                            </div>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/localizacao.png" />
+                            </div>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/telefone.png" />
+                            </div>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/arroba.png" />
+                            </div>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/web.png" />
+                            </div>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
