--- a/index.html
+++ b/index.html
@@ -444,46 +444,46 @@
             <div class="section-desc">Pricing Table</div>
             <div class="section-body">
                 <div class="section-price">
-                        <div class="section-price--item">
-                            <div class="section-price--item-name">Express</div>
-                            <div class="section-price--item-money">$ 9.99</div>
-                            <div class="section-price--item-period">/ month</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <a href="" class="button button--dark">Choose</a>
-                        </div>
-                        <div class="section-price--item">
-                            <div class="section-price--item-name">Express</div>
-                            <div class="section-price--item-money">$ 9.99</div>
-                            <div class="section-price--item-period">/ month</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <a href="" class="button button--dark">Choose</a>
-                        </div>
-                        <div class="section-price--item">
-                            <div class="section-price--item-name">Express</div>
-                            <div class="section-price--item-money">$ 9.99</div>
-                            <div class="section-price--item-period">/ month</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <a href="" class="button button--dark">Choose</a>
-                        </div>
-                        <div class="section-price--item">
-                            <div class="section-price--item-name">Express</div>
-                            <div class="section-price--item-money">$ 9.99</div>
-                            <div class="section-price--item-period">/ month</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <div class="section-price--item-point">Tracking issues<br/>--</div>
-                            <a href="" class="button button--dark">Choose</a>
-                        </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <div class="section-price--item-point">Tracking issues<br />--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -500,37 +500,42 @@
                                     <img src="media/livros.png" />
                                 </div>
                                 <div class="section-premium--right">
-                                        <div class="section-premium--item">
-                                            <img src="assets/images/check.png" />
-                                            <div>
-                                                <h4>FIRST FEATURE</h4>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.<br/>
-                                                -- FEATURE ONE<br/>
-                                                -- FEATURE TWO<br/>
-                                                -- FEATURE THREE
-                                            </div>
+                                    <div class="section-premium--item">
+                                        <img src="assets/images/check.png" />
+                                        <div>
+                                            <h4>FIRST FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae
+                                            erat condimentum viverra a nec lacus.<br />
+                                            -- FEATURE ONE<br />
+                                            -- FEATURE TWO<br />
+                                            -- FEATURE THREE
                                         </div>
-                                        <div class="section-premium--item">
-                                            <img src="assets/images/check.png" />
-                                            <div>
-                                                <h4>SECOND FEATURE</h4>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
-                                            </div>
+                                    </div>
+                                    <div class="section-premium--item">
+                                        <img src="assets/images/check.png" />
+                                        <div>
+                                            <h4>SECOND FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae
+                                            erat condimentum viverra a nec lacus.
                                         </div>
-                                        <div class="section-premium--item">
-                                            <img src="assets/images/check.png" />
-                                            <div>
-                                                <h4>THIRD FEATURE</h4>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
-                                            </div>
+                                    </div>
+                                    <div class="section-premium--item">
+                                        <img src="assets/images/check.png" />
+                                        <div>
+                                            <h4>THIRD FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae
+                                            erat condimentum viverra a nec lacus.
                                         </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div><div class="slide">
+                        </div>
+                        <div class="slide">
                             <div class="slidearea">
                                 ...
                             </div>
-                        </div><div class="slide">
+                        </div>
+                        <div class="slide">
                             <div class="slidearea">
                                 ...
                             </div>
@@ -627,7 +632,7 @@
                         </div>
                         <input type="text" name="name" placeholder="SUBJECT" />
                         <textarea name="message" placeholder="MESSAGE"></textarea>
-                       <a href="" class="button">Enviar</a>
+                        <a href="" class="button">Subscribe</a>
                     </form>
                 </div>
             </div>
@@ -636,42 +641,64 @@
         <section class="section-map">
             <div class="section-map--area">
                 <div class="section-map--info">
-                        <div class="section-map--info-item">
-                            <div class="section-map--info-item-img">
-                                <img src="assets/images/carta.png" />
-                            </div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="assets/images/carta.png" />
                         </div>
-                        <div class="section-map--info-item">
-                            <div class="section-map--info-item-img">
-                                <img src="assets/images/localizacao.png" />
-                            </div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="assets/images/localizacao.png" />
                         </div>
-                        <div class="section-map--info-item">
-                            <div class="section-map--info-item-img">
-                                <img src="assets/images/telefone.png" />
-                            </div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="assets/images/telefone.png" />
                         </div>
-                        <div class="section-map--info-item">
-                            <div class="section-map--info-item-img">
-                                <img src="assets/images/arroba.png" />
-                            </div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="assets/images/arroba.png" />
                         </div>
-                        <div class="section-map--info-item">
-                            <div class="section-map--info-item-img">
-                                <img src="assets/images/web.png" />
-                            </div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="assets/images/web.png" />
                         </div>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer--area">
+            <div class="footer--item area1">
+                <div class="footer-social">
+                    <a href=""><img src="assets/images/twitter.png" /></a>
+                    <a href=""><img src="assets/images/linkedin.png" /></a>
+                    <a href=""><img src="assets/images/facebook.png" /></a>
+                    <a href=""><img src="assets/images/googleplus.png" /></a>
+                    <a href=""><img src="assets/images/pinterest.png" /></a>
+                </div>
+            </div>
+            <div class="footer--item area2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a
+                nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus
+                quam, sed pellentesque quam. Vestibulum porta aliquet risus, ac rhoncus sem aliquet ac. Donec tincidunt
+                cursus elit vitae euismod.
+            </div>
+            <div class="footer--item area3">
+                <form method="POST">
+                    <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE" />
+                    <a href="" class="button">Subscribe</a>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 <script src="assets/js/index.js" type="text/js"></script>
